--- a/tasks/elasticsearch-scripts.yml
+++ b/tasks/elasticsearch-scripts.yml
@@ -10,12 +10,12 @@
       - always
 
 - name: Create script dir
-  file: state=directory path={{ es_script_dir }} owner={{ es_user }} group={{ es_group }}
+  file: state=directory path={{ es_script_dir }} owner={{ es_user }} group={{ es_group }} mode="0755"
 
 - name: Copy default scripts to elasticsearch
-  copy: src=scripts dest={{ es_script_dir }} owner={{ es_user }} group={{ es_group }}
+  copy: src=scripts dest={{ es_script_dir }} owner={{ es_user }} group={{ es_group }} mode="0755"
   when: es_scripts_fileglob is not defined
 
 - name: Copy scripts to elasticsearch
-  copy: src={{ item }} dest={{ es_script_dir }} owner={{ es_user }} group={{ es_group }}
+  copy: src={{ item }} dest={{ es_script_dir }} owner={{ es_user }} group={{ es_group }} mode="0755"
   with_fileglob: "{{ es_scripts_fileglob | default('') }}"
