--- a/tasks/elasticsearch-templates.yml
+++ b/tasks/elasticsearch-templates.yml
@@ -1,14 +1,14 @@
 ---
 
-- file: path=/etc/elasticsearch/templates state=directory mode="0755" owner={{ es_user }} group={{ es_group }}
+- file: path=/etc/elasticsearch/templates state=directory mode="0755"
 
 - name: Copy default templates to elasticsearch
-  copy: src=templates dest=/etc/elasticsearch/ owner={{ es_user }} group={{ es_group }} mode="0644" 
+  copy: src=templates dest=/etc/elasticsearch/ mode="0644" 
   notify: load-templates
   when: es_templates_fileglob is not defined
 
 - name: Copy templates to elasticsearch
-  copy: src={{ item }} dest=/etc/elasticsearch/templates owner={{ es_user }} group={{ es_group }} mode="0644" 
+  copy: src={{ item }} dest=/etc/elasticsearch/templates mode="0644" 
   notify: load-templates
   with_fileglob:
     - "{{ es_templates_fileglob | default('') }}"
