--- a/tasks/set-role-variables.yml
+++ b/tasks/set-role-variables.yml
@@ -14,22 +14,16 @@
 - name: compose url for downloading file, if necessary
   set_fact:
     es_tarball: elasticsearch-{{ es_version }}
+
 - name: compose url for downloading file, if necessary
   set_fact:
     es_tarball_url:  "{{ es_download_base_url }}/{{ es_tarball }}.tar.gz"
 
-
-- name: set node_master name
-  set_fact: 
-    node_master: "{{ es_master }}"
-  when: es_master is defined
-
-- debug: var=hosts
-- debug: var=ansible_current_groups
-- debug: var=inventory_hostname
-- debug: var=ansible_hostname
-
 - block:
+  - name: set node_master name
+    set_fact: 
+      node_master: "{{ es_master }}"
+
   - name: set node_master name
     set_fact: 
       node_master: "{{ es_master }}"
@@ -45,14 +39,19 @@
     set_fact: 
       node_master: ""
 
-  when: es_master is defined
-
-- block:
   - name: set node_master ip
     set_fact: 
       es_master_ip: "{{ inventory_hostname }}"
       es_master_port: "{{ es_config['http.port'] }}"
-  when: not node_master is defined and es_config['node.master']
+    when: not node_master is defined and es_config['node.master']
 
-- set_fact:
-    discovery_zen_ping_unicast_hosts: "{{ es_master_ip }}:{{ es_master_port|default(9200) }}"
+  - set_fact:
+      discovery_zen_ping_unicast_hosts: "{{ es_master_ip }}:{{ es_master_port|default(9300) }}"
+    when: es_master_ip is defined
+
+  when: es_master is defined
+
+- debug: var=es_master
+
+- debug: var=discovery_zen_ping_unicast_hosts
+
